# tasd-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lookup.rs  spec.rs
src/spec/: legacy.rs  packets.rs
tasd/: Cargo.toml
tasd-macros/: Cargo.toml
tasd-macros/src/: lib.rs  packet.rs  wrapper.rs
tasd/src/: legacy.rs  lib.rs  packets.rs
tasd/src/packets/: decode.rs  encode.rs
